# the-continuum-report

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONSOLIDATION_VERIFICATION_2026-01-04.md  CONTINUUM_REPORT_INFRASTRUCTURE_ASSESSMENT.md  CONTRIBUTING.md  DOCKER_IMPLEMENTATION_SUMMARY.md  Dockerfile  GITHUB_ACTIONS_FIXES_APPLIED.md  IMPLEMENTATION_ROADMAP.md  MASTER_PROJECT_STATUS.md  MASTER_TODO_LIST.md  Makefile  PENDING_CONNECTION_BRIEFS.md  QUICK_START_GUIDE.md  README.md  SESSION_LOG.md  SESSION_LOG_2025-12-28.md  SESSION_START_PROMPT.md  STATE.md  TODO.md  VERIFICATION_SUMMARY.md  connection_brief_reference.md  docker-compose.yml  index.md  log.md  pyproject.toml  pytest.ini  requirements.txt  setup-claude-config.sh  setup-claude-full.sh  source_link_audit.md
-md_backups/claude-to-claude-full/: CC1_Start.md  CC2_Start.md  CC3_Work.md
-md_backups/claude-to-claude-original/: CC2_Work.md  Expert_to_Overseer.md  MASTER_Claude_To_Claude.md  TASK_WoodsDen_Share_Setup.md
-md_backups/misc/: claude-smb-write-access-fix.md
-md_backups/prompts/: FIX12_REPOSITION_CONTROLS.md  FIX_INDEX.md  PHASE1_MACRO_UPDATE.md  PHASE2_ENTITIES_LAYER.md
.claude/: settings.json
.claude/agents/: brief-generator.md  citation-mapper.md  connection-brief-generator.md  document-acquisition.md  entity-extractor.md  epstein-extractor.md  financial-analyst.md  index.md  legal-auditor.md  log.md  project-status.md  qa-tester.md
.claude/rules/: legal-framework.md  source-citation.md
.github/: CICD_GUIDE.md  CODEOWNERS  DEPLOYMENT_CHECKLIST.md  INDEX.md  README.md  SETUP_GUIDE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  docker.yml  performance.yml  release.yml  security.yml
_archive/briefs_20251223/: analytical_brief_alan_dershowitz.md  analytical_brief_clare_bronfman.md  analytical_brief_glenn_dubin.md  analytical_brief_iran_contra.md  analytical_brief_les_wexner.md  analytical_brief_meyer_lansky.md  analytical_brief_oliver_north.md  analytical_brief_robert_maxwell.md
_archive/data/: consolidated_entities_phase1.json  consolidated_entities_phase1.md
_archive/data_20251223/: connection_briefs.json  connections.json  graph_summary.txt
_archive/misc/: SESSION7_CHECKPOINT.md  SESSION7_PROMPT.md  THEOLOGY_LAYER_PROGRESS.md  THEOLOGY_LAYER_QUICK_REFERENCE.md
_archive/pre-restructure-2026-02-09/: CLAUDE.md  MASTER_TODO_LIST.md  README.md  docker-compose.dev.yml  index.md  log.md
_archive/reports/: EPSTEIN_DOCUMENT_GAP_ANALYSIS_2025-12-25.md  FRONTEND_ASSESSMENT.md  (+15 more)
agents/: 2025-12-25-session-log.md  brief-generator.md  citation-mapper.md  connection-brief-generator.md  connection-brief-overseer.md  connection-builder.md  cross-reference-finder.md  document-acquisition.md  entity-extractor.md  financial-analyst.md  index-builder.md  index.md  legal-auditor.md  overseer.md  project-status-tracker.md  redaction-extractor.md  visualization-expert.md
bnis/: run_bnis.py
briefs/: INDEX.md  narrative_read_executive_power_expansion.md
briefs_backup_20251223_075731/: analytical_brief_bill_clinton.md  analytical_brief_cia.md  analytical_brief_ghislaine_maxwell.md  analytical_brief_jpmorgan_epstein.md  analytical_brief_keith_raniere.md  analytical_brief_terramar_project.md  analytical_brief_virginia_giuffre.md
config/: CLAUDE_CODE_CONTINUUM_TASK.md  CLAUDE_PROJECT_KNOWLEDGE.md  legal_framework.md  voice_guide.md
data_archive_20251223/: hierarchy.json  manifest.json
docker/: .env.example  DEPLOYMENT.md  FILES_MANIFEST.md  Makefile  QUICK_REFERENCE.md  README.md  cloudflared-config.yml  docker-compose.woodsden.yml  health-check.sh  nginx.conf  scripts.sh  setup-cloudflare-tunnel.ps1  setup-woodsden.ps1
docs/: CONFIGURATION.md  ENTITIES_README.md
indexes/: README.md  entity_registry.json  processed_sources.json  tag_map.json
pending_approval/: analytical_brief_teala_davies.md  brief_2026-02-09_gdelt_54a.md  brief_2026-02-09_gdelt_da8.md  brief_2026-02-09_rss_ae983.md
pipeline-data/: boilerplate_filter.json
reports/: DOCUMENT_ACQUISITION_STATUS.md  FBI_THEME_PHASE1_SUMMARY.md  SEARCH_SUMMARY_epstein_doj_33k_2025-12-23.txt  SECURITY_AUDIT_SESSION2.md  WORKFLOW_AUTOMATION_ANALYSIS.md  acquisition-report-2026-01-05.md  audit_operational_enabler_source_gaps.md  citation_gap_audit_2025-12-23.md  data_consolidation_analysis_2025-12-23.md  entity_curation_gaps.md  epstein-financial-master-timeline.md  epstein_doj_33k_CONFIRMED_MATCHES_visual_analysis.md  epstein_doj_33k_name_search_2025-12-23.md  fix_verification_2025-12-23.md  paperless-fbi-catalog.md  pipeline_audit_report.md
scripts/: .env.example  Dockerfile.webhook  add_entity_hyperlinks.py  add_new_connections.py  analyze_gaps.py  build_connections_from_briefs.py  build_entity_registry.py  build_graph.py  build_source_mentions.py  continuum_pipeline.py  create_missing_tags.py  export_sources.py  fix_layer_terminology.py  fix_sources.py  generate_connection_briefs.py  generate_dossiers.py  generate_epstein_dossier.py  inject_ecf_links.py  parse_brief.py  phase0_verify_and_collect.py  pipeline_daemon.py  pipeline_optimizer.py  rebuild_all_indexes.py  run_pipeline_local.sh  run_stage1.py  run_stage2.py  run_stage3.py  start_pipeline.sh  sync_connections_from_graph.py  upload_helper.py  validate_pipeline.py  webhook_listener.py
sops/: INSTALLATION_CHECKLIST.md  RUNBOOK.md  SOP-001-source-ingestion.md  SOP-002-context-extraction.md  SOP-003-brief-generation.md  SOP-004-publication.md  SOP-005-document-acquisition-standard.md
templates/: README.md  agency-brief.md  connection-brief.md
tests/: QUICK_START.md  README.md  TESTING_INFRASTRUCTURE_SUMMARY.md  __init__.py  conftest.py  test_config.py  test_ollama_client.py  test_package.py  test_paperless_client.py
website/: about.html  continuum.html  index.html  legal.html
work/: PHASE2_STATUS.txt  PIPELINE_EXECUTION_SUMMARY.md  analyze_data.py  claude_md_optimization_log.md  index_pipeline_log.md  pipeline_optimization_log.md  processing_queue.json
(+1492 files in other folders)
