# The Continuum Report - Modern Python Packaging
# PEP 517/518/621 compliant configuration

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "continuum-report"
version = "1.0.0"
description = "AI-powered document analysis pipeline for investigative research"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "The Continuum Report Team" }
]
keywords = [
    "document-analysis",
    "ai-pipeline",
    "paperless-ngx",
    "ollama",
    "intelligence-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]

# =============================================================================
# CORE DEPENDENCIES (from requirements.txt)
# =============================================================================
dependencies = [
    # HTTP requests with connection pooling
    "requests>=2.31.0",
    # Environment variable management
    "python-dotenv>=1.0.0",
    # Data validation and settings management
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Structured logging
    "structlog>=23.2.0",
    # Retry logic with exponential backoff
    "tenacity>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/continuum-report/continuum"
Documentation = "https://github.com/continuum-report/continuum#readme"
Repository = "https://github.com/continuum-report/continuum.git"
Issues = "https://github.com/continuum-report/continuum/issues"

# =============================================================================
# CLI ENTRY POINTS
# =============================================================================
# CLI entry points disabled - scripts run directly from pipeline/scripts/
# [project.scripts]
# continuum-pipeline = "continuum_report.scripts.continuum_pipeline:main"

# =============================================================================
# OPTIONAL DEPENDENCIES
# =============================================================================
[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
]

# Testing only
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "hypothesis>=6.100.0",
]

# Async support (Phase 4)
async = [
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
]

# Database support (Phase 3)
database = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
]

# Message queue (Phase 2)
queue = [
    "celery>=5.3.0",
    "redis>=5.0.0",
]

# Observability (Phase 6)
observability = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "prometheus-client>=0.19.0",
]

# All optional dependencies
all = [
    "continuum-report[dev,async,database,queue,observability]",
]

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["pipeline/src/continuum_report"]

[tool.hatch.build.targets.sdist]
include = [
    "/pipeline",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Ruff - Fast Python linter and formatter
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["pipeline/src", "pipeline/scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "S101"]
"scripts/**/*.py" = ["T201"]  # Allow print statements in scripts

[tool.ruff.lint.isort]
known-first-party = ["continuum_report"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy - Static type checker
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/continuum_report"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
fail_under = 80
